--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,26 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.10.0</version>
         </dependency>
+        <!-- spring-data-elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
+            <version>3.0.5.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.elasticsearch.plugin</groupId>
+                    <artifactId>transport-netty4-client</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.0.4.RELEASE</version>
+        </dependency>
+
+
         <!-- Jedis相关依赖 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
